# scifir-chemistry

./: .gitignore  CMakeLists.txt  CMakePresets.json  DISCARDED_FEATURES.md  README.md  TO-DO.md  TODO chemistry.md  TODO.md  chemistry.hpp  constants.cpp  constants.hpp  particles.hpp
analytical/: crystallograph.hpp  spectrometer.hpp
atoms/: atom.cpp  atom.hpp  atomic_group.cpp  atomic_group.hpp  atomic_orbital.cpp  atomic_orbital.hpp  datom.cpp  datom.hpp  datoms_ia.hpp  detailed_atom.cpp  detailed_atom.hpp  electron_cloud.hpp  extended_atom.cpp  extended_atom.hpp  normal_atom.hpp
biochemistry/: aminoacid.cpp  aminoacid.hpp  biomolecule.cpp  biomolecule.hpp  carbohidrate.cpp  carbohidrate.hpp  extended_aminoacid.cpp  extended_aminoacid.hpp  extended_carbohidrate.cpp  extended_carbohidrate.hpp  extended_triglyceride.cpp  extended_triglyceride.hpp  full_extended_aminoacid.cpp  full_extended_aminoacid.hpp  full_ultimate_aminoacid.cpp  full_ultimate_aminoacid.hpp  lipid.cpp  lipid.hpp  normal_carbohidrate.cpp  normal_carbohidrate.hpp  normal_protein.cpp  normal_protein.hpp  normal_triglyceride.cpp  normal_triglyceride.hpp  protein.cpp  protein.hpp  steroid.cpp  steroid.hpp  triglyceride.cpp  triglyceride.hpp  ultimate_aminoacid.cpp  ultimate_aminoacid.hpp  ultimate_carbohidrate.cpp  ultimate_carbohidrate.hpp  ultimate_triglyceride.cpp  ultimate_triglyceride.hpp
extra/: FindLinuxDistribution.cmake  scifir-chemistry-data
molecules/: atomic_bond.cpp  atomic_bond.hpp  atomic_bond_builder.cpp  atomic_bond_builder.hpp  atomic_group.cpp  atomic_group.hpp  bit_molecule.cpp  bit_molecule.hpp  chemical_reaction.cpp  chemical_reaction.hpp  molecule.cpp  molecule.hpp  normal_molecule.cpp  normal_molecule.hpp
particles/: electron.cpp  electron.hpp  proton.cpp  proton.hpp
substances/: matter.hpp  shape_matter.hpp  shape_substance.hpp  shape_substance_constituent.hpp  substance.hpp  substance_constituent.cpp  substance_constituent.hpp  substance_ia.hpp
tests/: test_atomic_bond.cpp  test_atomic_orbital.cpp  test_atoms.cpp  test_molecule.cpp
